fixes margin and top spacing of resource tabs

--- a/styleguide/source/assets/scss/03-organisms/_resource-tabs.scss
+++ b/styleguide/source/assets/scss/03-organisms/_resource-tabs.scss
@@ -5,6 +5,7 @@
 
   @include breakpoint($bp-small) {
     @include gutter($margin-top-half...);
+    @include gutter($margin-left-half...);
   }
 }
 
@@ -17,10 +18,9 @@
   overflow-y: hidden;
   padding: 0;
   border-radius: unset;
-  z-index: 99;
+  z-index: 9;
 
   @include breakpoint($bp-large) {
-    @include gutter($margin-left-half...);
     position: fixed;
     top: 60px;
   }
@@ -219,7 +219,7 @@ li {
   width: 100%;
   height: 100%;
   background: $white;
-  padding: $gutter / 2;
+  padding: $gutter / 2 0;
 
   &.ui-state-active {
     //z-index: 10;
